--- a/juego2.html
+++ b/juego2.html
@@ -8,6 +8,9 @@
 <body>
     <br>
     <br>
+    <button onclick="generar();">
+        Nuevo Tablero
+    </button>
     <table class="tabla1" border="1">
         <tbody>
 
@@ -67,81 +70,81 @@
                 </tr>
                 <tr>
                     <td>
-                        <button onclick="circulo();">
+                        <button onclick="linea3p1();">
                         xxx
                         </button>
                     </td>
                     <td>
-                        <button onclick="div();">
+                        <button onclick="linea3p2();">
                         xxx
                         </button>
                     </td>
                     <td>
-                        <button onclick="mult();">
+                        <button onclick="linea3p3();">
                         xxx
                         </button>
                     </td>
                     <td>
-                        <button onclick="del();">
+                        <button onclick="linea3p4();">
                         xxx
                         </button>
                     </td>
                     <td>
-                        <button onclick="cuboboton();">
-                        xxx
-                        </button>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <button onclick="num7();">
-                        xxx
-                        </button>
-                    </td>
-                    <td>
-                        <button onclick="num8();">
-                        xxx
-                        </button>
-                    </td>
-                    <td>
-                        <button onclick="num9();">
-                        xxx
-                        </button>
-                    </td>
-                    <td>
-                        <button onclick="resta();">
-                        xxx
-                        </button>
-                    </td>
-                    <td>
-                        <button onclick="cuboboton();">
+                        <button onclick="linea3p5();">
                         xxx
                         </button>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <button onclick="num4();">
+                        <button onclick="linea4p1();">
                         xxx
                         </button>
                     </td>
                     <td>
-                        <button onclick="num5();">
+                        <button onclick="linea4p2();">
                         xxx
                         </button>
                     </td>
                     <td>
-                        <button onclick="num6()">
+                        <button onclick="linea4p3();">
                         xxx
                         </button>
                     </td>
                     <td>
-                        <button onclick="mas();">
+                        <button onclick="linea4p4();">
                         xxx
                         </button>
                     </td>
                     <td>
-                        <button onclick="cuboboton();">
+                        <button onclick="linea4p5();">
+                        xxx
+                        </button>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <button onclick="linea5p1();">
+                        xxx
+                        </button>
+                    </td>
+                    <td>
+                        <button onclick="linea5p2();">
+                        xxx
+                        </button>
+                    </td>
+                    <td>
+                        <button onclick="linea5p3();">
+                        xxx
+                        </button>
+                    </td>
+                    <td>
+                        <button onclick="linea5p4();">
+                        xxx
+                        </button>
+                    </td>
+                    <td>
+                        <button onclick="linea5p5();">
                         xxx
                         </button>
                     </td>
@@ -168,6 +171,9 @@
                     <td width="75px">
                         <p id="linea1p5">X</p>
                     </td>
+                    <td width="75px">
+                        <p id="fila0">P</p>
+                    </td>
                 </tr>
                 <tr align="center">
                     <td >
@@ -184,6 +190,9 @@
                     </td>
                     <td>
                         <p id="linea2p5">X</p>
+                    </td>
+                    <td>
+                        <p id="fila1">P</p>
                     </td>
                 </tr>
                 <tr align="center">
@@ -202,6 +211,9 @@
                     <td>
                         <p id="linea3p5">X</p>
                     </td>
+                    <td>
+                        <p id="fila2">P</p>
+                    </td>
                 </tr>
                 <tr align="center">
                     <td>
@@ -218,6 +230,9 @@
                     </td>
                     <td>
                         <p id="linea4p5">X</p>
+                    </td>
+                    <td>
+                        <p id="fila3">P</p>
                     </td>
                 </tr>
                 <tr align="center">
@@ -236,58 +251,151 @@
                     <td>
                         <p id="linea5p5">X</p>
                     </td>
+                    <td>
+                        <p id="fila4">P</p>
+                    </td>
                 </tr>
+                <tr align="center">
+                    <td>
+                        <p id="columna0">P</p>
+                    </td>
+                    <td>
+                        <p id="columna1">P</p>
+                    </td>
+                    <td>
+                        <p id="columna2">P</p>
+                    </td>
+                    <td>
+                        <p id="columna3">P</p>
+                    </td>
+                    <td>
+                        <p id="columna4">P</p>
+                    </td>
+                    <td>
+                        <p id="totalp">P</p>
+                    </td>
+                </tr>
+
 
         </tbody>
     </table>
-    <button onclick="generar();">
-        Nuevo Tablero
-    </button>
+
+
     <script>
+        function perdiste() {
+            window.location.reload()
+            alert('Perdiste, crea un nuevo tablero por favor')
+        }
+        function condicional(fila, columna) {
+            return tablero[fila][columna] == null ? perdiste() : tablero[fila][columna]
+
+        }
         function linea1p1() {
-            document.getElementById("linea1p1").innerHTML = tablero[0][0] == null ? alert('Perdiste ¡¡') : tablero[0][0]
+            document.getElementById("linea1p1").innerHTML = condicional(0, 0)
 
         }
         function linea1p2() {
-            document.getElementById("linea1p2").innerHTML = tablero[0][1] == null ? alert('Perdiste ¡¡') : tablero[0][1]
+            document.getElementById("linea1p2").innerHTML = condicional(0, 1)
 
         }
         function linea1p3() {
-            document.getElementById("linea1p3").innerHTML = tablero[0][2] == null ? alert('Perdiste ¡¡') : tablero[0][2]
+            document.getElementById("linea1p3").innerHTML = condicional(0, 2)
 
         }
         function linea1p4() {
-            document.getElementById("linea1p4").innerHTML = tablero[0][3] == null ? alert('Perdiste ¡¡') : tablero[0][3]
+            document.getElementById("linea1p4").innerHTML = condicional(0, 3)
 
         }
         function linea1p5() {
-            document.getElementById("linea1p5").innerHTML = tablero[0][4] == null ? alert('Perdiste ¡¡') : tablero[0][4]
+            document.getElementById("linea1p5").innerHTML = condicional(0, 4)
 
         }
         function linea2p1() {
-            document.getElementById("linea2p1").innerHTML = tablero[1][0] == null ? alert('Perdiste ¡¡') : tablero[1][0]
+            document.getElementById("linea2p1").innerHTML = condicional(1, 0)
 
         }
         function linea2p2() {
-            document.getElementById("linea2p2").innerHTML = tablero[1][1] == null ? alert('Perdiste ¡¡') : tablero[1][1]
+            document.getElementById("linea2p2").innerHTML = condicional(1, 1)
 
         }
         function linea2p3() {
-            document.getElementById("linea2p3").innerHTML = tablero[1][2] == null ? alert('Perdiste ¡¡') : tablero[1][2]
+            document.getElementById("linea2p3").innerHTML = condicional(1, 2)
 
         }
         function linea2p4() {
-            document.getElementById("linea2p4").innerHTML = tablero[1][3] == null ? alert('Perdiste ¡¡') : tablero[1][3]
+            document.getElementById("linea2p4").innerHTML = condicional(1, 3)
 
         }
         function linea2p5() {
-            document.getElementById("linea2p5").innerHTML = tablero[1][4] == null ? alert('Perdiste ¡¡') : tablero[1][4]
+            document.getElementById("linea2p5").innerHTML = condicional(1, 4)
+
+        }
+        function linea3p1() {
+            document.getElementById("linea3p1").innerHTML = condicional(2, 0)
+
+        }
+        function linea3p2() {
+            document.getElementById("linea3p2").innerHTML = condicional(2, 1)
+
+        }
+        function linea3p3() {
+            document.getElementById("linea3p3").innerHTML = condicional(2, 2)
+
+        }
+        function linea3p4() {
+            document.getElementById("linea3p4").innerHTML = condicional(2, 3)
+
+        }
+        function linea3p5() {
+            document.getElementById("linea3p5").innerHTML = condicional(2, 4)
+
+        }
+        function linea4p1() {
+            document.getElementById("linea4p1").innerHTML = condicional(3, 0)
+
+        }
+        function linea4p2() {
+            document.getElementById("linea4p2").innerHTML = condicional(3, 1)
+
+        }
+        function linea4p3() {
+            document.getElementById("linea4p3").innerHTML = condicional(3, 2)
+
+        }
+        function linea4p4() {
+            document.getElementById("linea4p4").innerHTML = condicional(3, 3)
+
+        }
+        function linea4p5() {
+            document.getElementById("linea4p5").innerHTML = condicional(3, 4)
+
+        }
+        function linea5p1() {
+            document.getElementById("linea5p1").innerHTML = condicional(4, 0)
+
+        }
+        function linea5p2() {
+            document.getElementById("linea5p2").innerHTML = condicional(4, 1)
+
+        }
+        function linea5p3() {
+            document.getElementById("linea5p3").innerHTML = condicional(4, 2)
+
+        }
+        function linea5p4() {
+            document.getElementById("linea5p4").innerHTML = condicional(4, 3)
+
+        }
+        function linea5p5() {
+            document.getElementById("linea5p5").innerHTML = condicional(4, 4)
 
         }
 
-
-
         function generar() {
+            sumapc = 0
+            bombasc = 0
+            sumapf = 0
+            bombasf = 0
             tablero = new Array(5)
         for (i = 0; i < tablero.length; i++) {
             tablero[i] = new Array(5)
@@ -301,12 +409,42 @@
                 fila = Math.floor(Math.random() * 5)
                 columna = Math.floor(Math.random() * 5)
 
-                tablero[fila][columna] = Math.floor(Math.random() * 4)
+                tablero[fila][columna] = Math.floor((Math.random() * 3) + 1)
 
 
             }
             console.log(tablero)
+
+            //Contar puntos y bombas columnas
+            //
+            for (i = 0; i < 5; i++) {
+                for (i2 = 0; i2 < 5; i2++) {
+                    sumapc += tablero[i2][i] == null ? 0 : tablero[i2][i]
+                    bombasc += tablero[i2][i] == null ? 1 : 0
+                    document.getElementById("columna" + i).innerHTML ="P: " +  sumapc + "<br>" + "B: " + bombasc
+                    console.log(sumapc)
+
+                }
+                sumapc = 0
+                bombasc = 0
+            }
+            //Contar puntos y bombas fila
+            //
+            for (i = 0; i < 5; i++) {
+                for (i2 = 0; i2 < 5; i2++) {
+                    sumapf += tablero[i][i2] == null ? 0 : tablero[i][i2]
+                    bombasf += tablero[i][i2] == null ? 1 : 0
+                    document.getElementById("fila" + i).innerHTML ="P: " +  sumapf + "<br>" + "B: " + bombasf
+                    console.log(sumapf)
+
+                }
+                sumapf = 0
+                bombasf = 0
+
+            }
         }
+
+
 
 
     </script>
