--- a/juego2.html
+++ b/juego2.html
@@ -17,7 +17,7 @@
                 <td width="75px" id="td1p1">
                     <div id="l1p1">
                         <button onclick="linea1p1();">
-                            xxx
+                            &#9760
                         </button>
                     </div>
                     <p id="linea1p1">X</p>
@@ -25,7 +25,7 @@
                 <td width="75px" id="td1p2">
                     <div id="l1p2">
                         <button onclick="linea1p2();">
-                            xxx
+                            &#9760
                         </button>
                     </div>
                     <p id="linea1p2">X</p>
@@ -33,7 +33,7 @@
                 <td width="75px" id="td1p3">
                     <div id="l1p3">
                         <button onclick="linea1p3();">
-                            xxx
+                            &#9760
                         </button>
                     </div>
                     <p id="linea1p3">X</p>
@@ -41,7 +41,7 @@
                 <td width="75px" id="td1p4">
                     <div id="l1p4">
                         <button onclick="linea1p4();">
-                            xxx
+                            &#9760
                         </button>
                     </div>
                     <p id="linea1p4">X</p>
@@ -49,7 +49,7 @@
                 <td width="75px" id="td1p5">
                     <div id="l1p5">
                         <button onclick="linea1p5();">
-                            xxx
+                            &#9760
                         </button>
                     </div>
                     <p id="linea1p5">X</p>
@@ -62,7 +62,7 @@
                 <td id="td2p1">
                     <div id="l2p1" >
                         <button onclick="linea2p1();">
-                            xxx
+                            &#9760
                         </button>
                     </div>
                     <p id="linea2p1">X</p>
@@ -70,7 +70,7 @@
                 <td id="td2p2">
                     <div id="l2p2" >
                         <button onclick="linea2p2();">
-                            xxx
+                            &#9760
                         </button>
                     </div>
                     <p id="linea2p2">X</p>
@@ -78,7 +78,7 @@
                 <td id="td2p3">
                     <div id="l2p3">
                         <button onclick="linea2p3();">
-                            xxx
+                            &#9760
                         </button>
                     </div>
                     <p id="linea2p3">X</p>
@@ -86,7 +86,7 @@
                 <td id="td2p4">
                     <div id="l2p4">
                         <button onclick="linea2p4();">
-                            xxx
+                            &#9760
                         </button>
                     </div>
                     <p id="linea2p4">X</p>
@@ -94,7 +94,7 @@
                 <td id="td2p5">
                     <div id="l2p5">
                         <button onclick="linea2p5();">
-                            xxx
+                            &#9760
                         </button>
                     </div>
                     <p id="linea2p5">X</p>
@@ -107,7 +107,7 @@
                 <td id="td3p1">
                     <div id="l3p1">
                         <button onclick="linea3p1();">
-                            xxx
+                            &#9760
                         </button>
                     </div>
                     <p id="linea3p1">X</p>
@@ -115,7 +115,7 @@
                 <td id="td3p2">
                     <div id="l3p2">
                         <button onclick="linea3p2();">
-                            xxx
+                            &#9760
                         </button>
                     </div>
                     <p id="linea3p2">X</p>
@@ -123,7 +123,7 @@
                 <td id="td3p3">
                     <div id="l3p3">
                         <button onclick="linea3p3();">
-                            xxx
+                            &#9760
                         </button>
                     </div>
                     <p id="linea3p3">X</p>
@@ -131,7 +131,7 @@
                 <td id="td3p4">
                     <div id="l3p4">
                         <button onclick="linea3p4();">
-                            xxx
+                            &#9760
                         </button>
                     </div>
                     <p id="linea3p4">X</p>
@@ -139,7 +139,7 @@
                 <td id="td3p5">
                     <div id="l3p5">
                         <button onclick="linea3p5();">
-                            xxx
+                            &#9760
                         </button>
                     </div>
                     <p id="linea3p5">X</p>
@@ -152,7 +152,7 @@
                 <td id="td4p1">
                     <div id="l4p1">
                         <button onclick="linea4p1();">
-                            xxx
+                            &#9760
                         </button>
                     </div>
                     <p id="linea4p1">X</p>
@@ -160,7 +160,7 @@
                 <td id="td4p2">
                     <div id="l4p2">
                         <button onclick="linea4p2();">
-                            xxx
+                            &#9760
                         </button>
                     </div>
                     <p id="linea4p2">X</p>
@@ -168,7 +168,7 @@
                 <td id="td4p3">
                     <div id="l4p3">
                         <button onclick="linea4p3();">
-                            xxx
+                            &#9760
                         </button>
                     </div>
                     <p id="linea4p3">X</p>
@@ -176,7 +176,7 @@
                 <td id="td4p4">
                     <div id="l4p4">
                         <button onclick="linea4p4();">
-                            xxx
+                            &#9760
                         </button>
                     </div>
                     <p id="linea4p4">X</p>
@@ -184,7 +184,7 @@
                 <td id="td4p5">
                     <div id="l4p5">
                         <button onclick="linea4p5();">
-                            xxx
+                            &#9760
                         </button>
                     </div>
                     <p id="linea4p5">X</p>
@@ -197,7 +197,7 @@
                 <td id="td5p1">
                     <div id="l5p1">
                         <button onclick="linea5p1();">
-                            xxx
+                            &#9760
                         </button>
                     </div>
                     <p id="linea5p1">X</p>
@@ -205,7 +205,7 @@
                 <td id="td5p2">
                     <div id="l5p2">
                         <button onclick="linea5p2();">
-                            xxx
+                            &#9760
                         </button>
                     </div>
                     <p id="linea5p2">X</p>
@@ -213,7 +213,7 @@
                 <td id="td5p3">
                     <div id="l5p3">
                         <button onclick="linea5p3();">
-                            xxx
+                            &#9760
                         </button>
                     </div>
                     <p id="linea5p3">X</p>
@@ -221,7 +221,7 @@
                 <td id="td5p4">
                     <div id="l5p4">
                         <button onclick="linea5p4();">
-                            xxx
+                            &#9760
                         </button>
                     </div>
                     <p id="linea5p4">X</p>
@@ -229,7 +229,7 @@
                 <td id="td5p5">
                     <div id="l5p5">
                         <button onclick="linea5p5();">
-                            xxx
+                            &#9760
                         </button>
                     </div>
                     <p id="linea5p5">X</p>
@@ -438,7 +438,7 @@
 
         for (i = 1; i < 6; i++) {
             for (i2 = 1; i2 < 6; i2++) {
-                document.getElementById("linea" + i + "p" + i2).innerHTML = "X"
+                document.getElementById("linea" + i + "p" + i2).innerHTML = "&#9762"
             }
         }
 
@@ -448,7 +448,7 @@
 
         for (i = 1; i < 6; i++) {
             for (i2 = 1; i2 < 6; i2++) {
-                document.getElementById("l" + i + "p" + i2).innerHTML = '<button onclick=' + '"linea' + i + 'p' + i2 + '();"' + '>xxx</button>'
+                document.getElementById("l" + i + "p" + i2).innerHTML = '<button onclick=' + '"linea' + i + 'p' + i2 + '();"' + '>&#9760</button>'
             }
         }
 
