--- a/proyect/index.html
+++ b/proyect/index.html
@@ -27,8 +27,12 @@
         <button>Donar</button>
         <h4>2023 @ ANIMALES SANLUCAR, Centro Municipal de Proteccion Animal</h4>
         <ul>
-            <li><a href="index.html">Facebook</a></li>
-            <li><a href="https://openaccess.uoc.edu/?locale=es">Instagram</a></li>
+            <li><a href="index.html"><img
+                src="ccb8029d-fa5c-459c-9b0d-b4c86327f742.png" alt="instagram"
+                width="27" height="27"></a></li>
+            <li><a href="https://openaccess.uoc.edu/?locale=es"><img
+                src="584ac2d03ac3a570f94a666d.png" alt="instagram"
+                width="25" height="25"></a></li>
         </ul>
     </footer>
 </body>
