--- a/proyect/index.html
+++ b/proyect/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
+    <div class="container">
+        <img src="animales-corre-hierba-perro-wallpaper-preview.jpg" alt="Eniun logo">
+        <div class="encima"><h2>ANIMALES SANLUCAR</h2></div>
+
+        </div>
     <header>
         <nav>
             <a href="index.html"><img
@@ -21,10 +26,49 @@
 
             </ul>
         </nav>
+
     </header>
+
+    <div class="columna1"></div>
+    <div class="columna2"></div>
+
+    <section>
+        <article class="primero">
+            <h1 class="hh1">
+                Bienvenidos a ANIMALES SANLUCAR
+            </h1>
+            <p class="segundo">ANIMALES SANLUCAR es una asociación sin ánimo de lucro, legalmente constituida, cuyos objetivos principales son: <br><br>
+
+                ---Denunciar el abandono y maltrato de los animales y promover su defensa.---<br><br>
+
+                ---Rescatar y cuidar de perros y gatos abandonados asi como cualquier aimal nesesitado y buscarles familias adoptantes.---<br><br><br>
+
+
+                Somos una asociación totalmente independiente cuya única<br>
+                fuente de financiación son las cuotas de los colaboradores y los donativos.<br>
+                Nuestra asociación pone especial empeño en proteger aquellos animales que son peor tratados por la sociedad, por motivos de edad, raza o enfermedad.</p><br>
+        </article>
+        <article  class="tercero">
+            <h1 class="hh12" >ANIMALES EN ADOPCION</h1>
+            <img class="img1" src="istockphoto-1256586406-640x640.jpg" alt="Eniun logo"
+                width="200" height="200">
+            <img class="img1" src="bigstock-close-up-of-male-hand-petting-340780039.jpeg" alt="Eniun logo"
+                width="200" height="200">
+            <img class="img2" src="bigstock-close-up-of-male-hand-petting-340780039.jpeg" alt="Eniun logo"
+                width="200" height="200">
+            <img class="img2" src="bigstock-close-up-of-male-hand-petting-340780039.jpeg" alt="Eniun logo"
+                width="200" height="200">
+
+        </article>
+
+
+
+    </section>
 
     <footer>
         <button>Donar</button>
+        <img src="png-clipart-discover-card-mastercard-american-express-visa-credit-card-mastercard-text-logo.png" alt="Eniun logo"
+                width="74" height="33">
         <h4>2023 @ ANIMALES SANLUCAR, Centro Municipal de Proteccion Animal</h4>
         <ul>
             <li><a href="index.html"><img
