--- a/proyect/nosotros.html
+++ b/proyect/nosotros.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pagina principal</title>
+    <title>Sobre Nosotros</title>
     <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
@@ -33,34 +33,47 @@
     <div class="columna2"></div>
 
     <section>
-        <article class="primero">
-            <h1 class="hh1">
-                Bienvenidos a ANIMALES SANLUCAR
+        <article class="nosotros1">
+            <h1 class="hhn1">
+                DESDE 1911
             </h1>
-            <p class="segundo">ANIMALES SANLUCAR es una asociación sin ánimo de lucro, legalmente constituida, cuyos objetivos principales son: <br><br>
-
-                ---Denunciar el abandono y maltrato de los animales y promover su defensa.---<br><br>
-
-                ---Rescatar y cuidar de perros y gatos abandonados asi como cualquier aimal nesesitado y buscarles familias adoptantes.---<br><br><br>
-
-
-                Somos una asociación totalmente independiente cuya única<br>
-                fuente de financiación son las cuotas de los colaboradores y los donativos.<br>
-                Nuestra asociación pone especial empeño en proteger aquellos animales que son peor tratados por la sociedad, por motivos de edad, raza o enfermedad.</p><br>
+            <p class="pn1" >Salvando animales y <br> dandoles un hogar</p>
         </article>
-        <article  class="tercero">
-            <h1 class="hh12" >ANIMALES EN ADOPCION</h1>
-            <img class="img1" src="istockphoto-1256586406-640x640.jpg" alt="Eniun logo"
-                width="200" height="200">
-            <img class="img1" src="bigstock-close-up-of-male-hand-petting-340780039.jpeg" alt="Eniun logo"
-                width="200" height="200">
-            <img class="img2" src="bigstock-close-up-of-male-hand-petting-340780039.jpeg" alt="Eniun logo"
-                width="200" height="200">
-            <img class="img2" src="bigstock-close-up-of-male-hand-petting-340780039.jpeg" alt="Eniun logo"
-                width="200" height="200">
-
+        <article class="nosotros2">
+            <h1 class="hhn1">
+                NUESTRA HISTORIA
+            </h1>
+            <p class="pn2">La Sociedad ANIMALES SANLUCAR de sanlucar de barrameda,
+                se fundó en el año 1.911 siendo por lo tanto una de las
+                Protectoras de Animales más antiguas de España.Desde entonces
+                la labor que viene desarollando ésta Protectora, abarca caminos
+                dispares pero siempre dirigidos a un mismo fin..la defensa y protección
+                de los animales.</p><br>
         </article>
+        <article class="nosotros3">
+            <ul>
+                <div class="lista1" >
+               <p> ADOPTA O APADRINA A UN AMIGO </p>
+               <input type="button" value="ADOPTA" onclick="donar()">
+            </div>
+            <div class="lista" >
+                <p> HAZTE SOCIO POR UNA CUOTA MINIMA DE 5$ AL MES </p>
+                <input type="button" value="ENTRAR" onclick="donar()">
+            </div>
+                <div class="lista" >
+                <p> HAZTE VOLUNTARIO Y AYUDALOS DIRECTAMENTE </p>
+                <input type="button" value="ENTRAR" onclick="donar()">
+            </div>
 
+
+
+
+
+
+
+
+        </ul>
+        </article>
 
 
     </section>
