--- a/proyect/nosotros.html
+++ b/proyect/nosotros.html
@@ -33,6 +33,7 @@
     <div class="columna2"></div>
 
     <section>
+        <div class="noso" >
         <article class="nosotros1">
             <h1 class="hhn1">
                 DESDE 1911
@@ -50,30 +51,32 @@
                 dispares pero siempre dirigidos a un mismo fin..la defensa y protección
                 de los animales.</p><br>
         </article>
+    </div>
+    <div class="noso" >
         <article class="nosotros3">
-            <ul>
-                <div class="lista1" >
-               <p> ADOPTA O APADRINA A UN AMIGO </p>
-               <input type="button" value="ADOPTA" onclick="donar()">
-            </div>
-            <div class="lista" >
-                <p> HAZTE SOCIO POR UNA CUOTA MINIMA DE 5$ AL MES </p>
-                <input type="button" value="ENTRAR" onclick="donar()">
-            </div>
-                <div class="lista" >
-                <p> HAZTE VOLUNTARIO Y AYUDALOS DIRECTAMENTE </p>
-                <input type="button" value="ENTRAR" onclick="donar()">
-            </div>
+            <img
+                src="ccb8029d-fa5c-459c-9b0d-b4c86327f742.png" alt="Eniun logo"
+                width="74" height="33">
+            <p >ADOPTA O APADRINA A UN AMIGO</p>
+            <input type="button" value="ADOPTA" onclick="donar()">
 
-
-
-
-
-
-
-
-        </ul>
         </article>
+        <article class="nosotros4">
+            <img
+            src="ccb8029d-fa5c-459c-9b0d-b4c86327f742.png" alt="Eniun logo"
+            width="74" height="33">
+            <p >HAZTE SOCIO POR UNA CUOTA MINIMA DE 5$ AL MES </p>
+            <input type="button" value="ENTRAR" onclick="donar()">
+        </article>
+        <article class="nosotros4">
+            <img
+            src="ccb8029d-fa5c-459c-9b0d-b4c86327f742.png" alt="Eniun logo"
+            width="74" height="33">
+            <p >HAZTE VOLUNTARIO Y AYUDALOS DIRECTAMENTE </p>
+            <input type="button" value="ENTRAR" onclick="donar()">
+        </article>
+    </div>
+
 
 
     </section>
