--- a/proyect/index.html
+++ b/proyect/index.html
@@ -22,7 +22,7 @@
                 <li><a href="https://openaccess.uoc.edu/?locale=es">Adopta</a></li>
                 <li><a href="paginas/publicar.html">Finales Felices</a></li>
                 <li><a href="paginas/publicar.html">Contacto</a></li>
-                <li><a href="paginas/publicar.html">Sobre nosotros</a></li>
+                <li><a href="nosotros.html">Sobre nosotros</a></li>
 
             </ul>
         </nav>
