--- a/proyect/nosotros.html
+++ b/proyect/nosotros.html
@@ -22,7 +22,7 @@
                 <li><a href="https://openaccess.uoc.edu/?locale=es">Adopta</a></li>
                 <li><a href="paginas/publicar.html">Finales Felices</a></li>
                 <li><a href="paginas/publicar.html">Contacto</a></li>
-                <li><a href="paginas/publicar.html">Sobre nosotros</a></li>
+                <li><a href="nosotros.html">Sobre nosotros</a></li>
 
             </ul>
         </nav>
@@ -68,7 +68,7 @@
             <p >HAZTE SOCIO POR UNA CUOTA MINIMA DE 5$ AL MES </p>
             <input type="button" value="ENTRAR" onclick="donar()">
         </article>
-        <article class="nosotros4">
+        <article class="nosotros5">
             <img
             src="ccb8029d-fa5c-459c-9b0d-b4c86327f742.png" alt="Eniun logo"
             width="74" height="33">
